apps/nethub-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nethub-api-service
  namespace: nethub
  labels:
    app: nethub-api
    app.kubernetes.io/name: nethub-api
spec:
  type: ClusterIP
  selector:
    app: nethub-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
